<resources>
    <string name="app_name">Volunteer Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="org">Organization/Sponsor</string>
    <string name="act">Activity</string>
    <string name="actdate">Date of Volunteering</string>
    <string name="hour">Hours</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Save</string>
    <string name="cancel">Cancel</string>
    <string name="date_hint">MM/DD/YYYY</string>
    <string name="title_activity_home_page">Volunteer Tracker</string>
    <string name="title_activity_reports">Report - My Volunteering</string>
    <string name="totalHours">Total Hours =</string>
    <string name="SaveActivity">Save Activity</string>
    <string name="TakePicture">Take Picture</string>
    <string name="Gallery">Gallery</string>
    <string name="Opportunity">Vol Signup</string>
    <string name="title_activity_volunteer_events">VolunteerEvents</string>
</resources>
